High/check-attach-pods/.chainsaw-test/bad-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: check-attach-pods
rules:
  - apiGroups: ["*"]
    resources: ["pods/attach"]
    verbs: ["create"]
  - apiGroups: ["*"]
    resources: ["pods"]
    verbs: ["get"]
