High/check-attach-pods/.chainsaw-test/bad-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: test2
  name: check-attach-pods
rules:
  - apiGroups: ["*"]
    resources: ["pods/attach"]
    verbs: ["create"]
  - apiGroups: ["*"]
    resources: ["pods"]
    verbs: ["get"]
