High/check-attach-pods/.chainsaw-test/good-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: test4
  name: check-attach-pods
rules:
  - apiGroups: ["*"]
    resources: ["pods/attach"]
    verbs: ["get"]
  - apiGroups: ["*"]
    resources: ["pods"]
    verbs: ["get"]
