High/check-attach-pods/check-attach-pods.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-attach-pods
  annotations:
    policies.kyverno.io/title: Attaching pod and view all its logs in realtime
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: high
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.28"
    policies.kyverno.io/subject: ClusterRoleBinding
    policies.kyverno.io/description: >-
      This policy will check for all the service accounts which are mapped with a Roles/ClusterRoles allowing the user to attach a shell with a pod and view the logs in realtime.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-attach-pods-clusterrole
      match:
        any:
        - resources:
            kinds:
            - ClusterRoleBinding
      context:
        - name: role
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/clusterroles/{{ request.object.roleRef.name }}"
      validate:
        message: >- 
           ClusterRoleBinding {{ request.object.metadata.name }} with subjects {{ request.object.subjects[].name }}
           is using role {{role.metadata.name}}
        deny:
          conditions:
            any:
              - key: "{{ ( contains(role.rules[].verbs[], 'create') && contains(role.rules[].resources[], 'pods/attach')) && (contains(role.rules[].verbs[], 'get') && contains(role.rules[].resources[], 'pods')) && contains(role.rules[].apiGroups[], '*') }}"
                operator: Equals
                value: true
    - name: check-attach-pods-roles
      match:
        any:
          - resources:
              kinds:
                - RoleBinding
      preconditions:
        any:
        - key: "{{ request.object.roleRef.kind || 'ClusterRole' }}"
          operator: NotEquals
          value: ClusterRole
      context:
        - name: role
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/namespaces/{{ request.object.metadata.namespace }}/roles/{{ request.object.roleRef.name }}"
      validate:
        message: >- 
           RoleBinding {{ request.object.metadata.name }} with subjects {{ request.object.subjects[].name }} 
           is using role {{role.metadata.name}}
        deny:
          conditions:
            any:
              - key: "{{ ( contains(role.rules[].verbs[], 'create') && contains(role.rules[].resources[], 'pods/attach')) && (contains(role.rules[].verbs[], 'get') && contains(role.rules[].resources[], 'pods')) && contains(role.rules[].apiGroups[], '*') }}"
                operator: Equals
                value: true
